--- a/scss/modules/_shame.scss
+++ b/scss/modules/_shame.scss
@@ -7,3 +7,9 @@
         height: 68.5px;
     }
 }
+
+.library__window {
+    @include mq(medium) {
+        aspect-ratio: 1 / 1;
+    }
+}
